--- a/gcc-gcj/trunk/PKGBUILD
+++ b/gcc-gcj/trunk/PKGBUILD
@@ -1,29 +1,31 @@
 # $Id$
 # Maintainer: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 # There's a circular dependency between gcc-gcj and eclipse-ecj. There is no 
 # way to solve this issue other than first building an older version without
 # the dependency and using that with eclipse-ecj to build this version.
 
 pkgname=gcc-gcj
-pkgver=4.3.1
+pkgver=4.3.2
 pkgrel=1
 pkgdesc="GNU Java Environment"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
 url="http://gcc.gnu.org"
-depends=("gcc>=4.3.0" "gtk2>=2.12.5" 'file' 'libsm' 'libxtst' 'alsa-lib' "eclipse-ecj>=3.3.1.1")
-makedepends=('texinfo' 'pkgconfig' 'xulrunner>=1.8.1.12' 'libart-lgpl' 'jack-audio-connection-kit' 'libxtst')
+depends=("gcc>=4.3.2" "gtk2>=2.12.11" 'file' 'libsm' 'libxtst' 'alsa-lib' "eclipse-ecj>=3.3.2")
+makedepends=('texinfo' 'pkgconfig' 'xulrunner>=1.9.0.1' 'libart-lgpl' 'jack-audio-connection-kit' 'libxtst')
 options=('!libtool')
+install=gcc-gcj.install
 source=(ftp://gcc.gnu.org/pub/gcc/releases/gcc-${pkgver}/gcc-{core,g++,java}-${pkgver}.tar.bz2
 	gcj-4.3-tools.jar-path.diff
 	gcc_pure64.patch
 	libjava-disable-static.dpatch
 	libjava-sjlj.dpatch
 	gcc-hash-style-both.patch)
-md5sums=('f30652bdee577911681c86f5d7f23d65'
-         '1e0eadf92c2aeff4611fe9da286348d4'
-         '1987df86bd860ea9b7d9c7668d6ad5e3'
+md5sums=('dd8048b43d3d4e5595bcade47b9144c6'
+         'bfdf8d19e1b85f522f8b8d48d25e7aaa'
+         '4a1dee5782dccc505072c6401cf1d4c3'
          '602eb960c7752cc4877309e691110c06'
          '4030ee1c08dd1e843c0225b772360e76'
          'e5e13a1815b676b66e119c7f46550a90'
@@ -35,9 +37,8 @@ build() {
     echo "You need the de_DE locale to build gcc."
     return 1
   fi
-  [ -z "${MOZ_PLUGIN_PATH}" ] && . /etc/profile.d/mozilla-common.sh ]
 
-  cd ${startdir}/src/gcc-${pkgver}
+  cd ${srcdir}/gcc-${pkgver}
 
   # Don't install libiberty
   sed -i 's/install_to_$(INSTALL_DEST) //' libiberty/Makefile.in
@@ -45,15 +46,15 @@ build() {
   if [ "${CARCH}" = "x86_64" ]; then
     patch -Np1 -i ../gcc_pure64.patch || return 1
   fi
-  chmod +x ${startdir}/src/*.dpatch
-  ${startdir}/src/libjava-disable-static.dpatch -patch || return 1
+  chmod +x ${srcdir}/*.dpatch
+  ${srcdir}/libjava-disable-static.dpatch -patch || return 1
   echo 'sjlj'
-  ${startdir}/src/libjava-sjlj.dpatch -patch || return 1
+  ${srcdir}/libjava-sjlj.dpatch -patch || return 1
 
   echo 'hash'
-  patch -Np0 -i ${startdir}/src/gcc-hash-style-both.patch || return 1
+  patch -Np0 -i ${srcdir}/gcc-hash-style-both.patch || return 1
   echo 'tools'
-  patch -Np0 -i ${startdir}/src/gcj-4.3-tools.jar-path.diff || return 1
+  patch -Np0 -i ${srcdir}/gcj-4.3-tools.jar-path.diff || return 1
 
   mkdir build
   cd build
@@ -61,11 +62,11 @@ build() {
      --enable-languages=java --enable-threads=posix \
      --enable-__cxa_atexit --enable-java-awt=gtk \
      --libdir=/usr/lib --libexecdir=/usr/lib --disable-multilib \
-     --enable-clocale=gnu --mandir=/usr/share/man \
+     --enable-clocale=gnu --mandir=/usr/share/man --infodir=/usr/share/info \
      --with-java-home=/usr/lib/jvm/java-1.5.0-gcj-1.5.0.0/jre \
      --enable-libgcj-multifile --with-tune=generic \
      --with-ecj-jar=/usr/share/java/eclipse-ecj.jar \
-     --enable-plugin --with-system-zlib --disable-libstdcxx-pch
+     --disable-plugin --with-system-zlib --disable-libstdcxx-pch
    make || return 1
    make -j1 DESTDIR=${startdir}/pkg install-target-libjava
 
@@ -92,4 +93,5 @@ build() {
    ln -sf libgcj-${pkgver}.jar ${startdir}/pkg/usr/share/java/libgcj-4.3.jar
    ln -sf libgcj-tools-${pkgver}.jar ${startdir}/pkg/usr/share/java/libgcj-tools-4.3.jar
 
+   rm -f ${pkgdir}/usr/share/info/dir
 }
