--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,23 +1,26 @@
 # $Id$
-# Maintainer : Damir Perisa <damir.perisa@bluewin.ch>
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
+# Contributor : Damir Perisa <damir.perisa@bluewin.ch>
 
 pkgname=kile
-pkgver=2.0.1
+pkgver=2.0.2
 pkgrel=1
 pkgdesc="A user friendly TeX/LaTeX frontend for KDE."
 arch=("i686" "x86_64")
 license=('GPL2')
 url="http://kile.sourceforge.net/"
-depends=('libx11' 'qt3>=3.3.8' 'kdelibs3>=3.5.8' 'tetex' 'psutils')
-source=("http://switch.dl.sourceforge.net/sourceforge/kile/$pkgname-$pkgver.tar.bz2")
-md5sums=('1d18762b6c62fb58123b1a89bdd39fb1')
+depends=('kdelibs3>=3.5.8' 'tetex' 'psutils')
+source=("http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.bz2")
+md5sums=('0599b546e49029f9e42835494892a04c')
+options=(!emptydirs)
 
 build() {
-   cd $startdir/src/$pkgname-$pkgver
+   cd $srcdir/$pkgname-$pkgver
    . /etc/profile.d/qt3.sh
    . /etc/profile.d/kde3.sh
    ./configure --prefix=/opt/kde --without-arts
    make || return 1
-   make prefix=$startdir/pkg/opt/kde install
-   rm $startdir/pkg/opt/kde/share/apps/katepart/syntax/{bibtex,latex}.xml
+   make prefix=$pkgdir/opt/kde install
+   rm $pkgdir/opt/kde/share/apps/katepart/syntax/{bibtex,latex}.xml
 }
+
