--- a/pygtk/repos/gnome-i686/PKGBUILD
+++ b/pygtk/repos/gnome-i686/PKGBUILD
@@ -3,22 +3,22 @@
 # Contributor: Sarah Hay <sarahhay@mb.sympatico.ca>
 
 pkgname=pygtk
-pkgver=2.12.1
+pkgver=2.13.0
 pkgrel=1
 pkgdesc="Python bindings for the GTK widget set"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('libglade>=2.6.2' 'pycairo>=1.4.0' 'pygobject>=2.14.1' 'python-numeric>=24.2-2' 'gtk2>=2.12.0')
+depends=('libglade>=2.6.3' 'pycairo>=1.6.4' 'pygobject>=2.15.4' 'python-numeric>=24.2-2')
 options=('!libtool')
 url="http://www.pygtk.org/"
-source=(http://ftp.gnome.org/pub/gnome/sources/pygtk/2.12/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('a816346d750d61e3fa67a200e4292694')
+source=(http://ftp.gnome.org/pub/gnome/sources/pygtk/2.13/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('e1513921bfd3790b456899c483fceaea')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  sed -i -e 's/SUBDIRS = codegen . $(GTK_SUBDIR) examples tests docs/SUBDIRS = codegen . $(GTK_SUBDIR) examples tests/' Makefile.in
-  ./configure --prefix=/usr
+  #sed -i -e 's/SUBDIRS = codegen . $(GTK_SUBDIR) examples tests docs/SUBDIRS = codegen . $(GTK_SUBDIR) examples tests/' Makefile.in
+  ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install
-  install -m644 gtk/gtk-extrafuncs.defs ${startdir}/pkg/usr/share/pygtk/2.0/defs/
+  make DESTDIR=${startdir}/pkg install || return 1
+  install -m644 gtk/gtk-extrafuncs.defs ${startdir}/pkg/usr/share/pygtk/2.0/defs/ || return 1
 }
