--- a/gnome-panel/repos/gnome-i686/PKGBUILD
+++ b/gnome-panel/repos/gnome-i686/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-panel
-pkgver=2.23.90.1
+pkgver=2.23.91
 pkgrel=1
 pkgdesc="The GNOME Panel"
 arch=(i686 x86_64)
 license=('GPL')
 url="http://www.gnome.org"
-depends=('libwnck>=2.23.6' 'gnome-menus>=2.23.6' 'evolution-data-server>=2.23.90.1' 'gnome-desktop>=2.23.90' 'libgweather>=2.23.6' 'librsvg>=2.22.2')
+depends=('libwnck>=2.23.91' 'gnome-menus>=2.23.91' 'evolution-data-server>=2.23.91' 'gnome-desktop>=2.23.91' 'libgweather>=2.23.91' 'librsvg>=2.22.2' 'policykit-gnome>=0.9.2')
 makedepends=('perlxml' 'gnome-doc-utils>=0.12.2' 'pkgconfig')
 options=('!libtool' '!emptydirs')
 groups=('gnome')
 install=gnome-panel.install
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('fb33af68201e66faf84abab3fb75fe2e')
+md5sums=('56b17e14666d80a02e48c6ef457dde7e')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
