--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -2,18 +2,18 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libgnomekbd
-pkgver=2.23.2
+pkgver=2.23.91
 pkgrel=1
 pkgdesc="Gnome keyboard library"
 url="http://gswitchit.sourceforge.net"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('libxklavier>=3.6' 'libgnomeui>=2.23.90')
+depends=('libxklavier>=3.7' 'gconf>=2.23.2' 'libglade>=2.6.3')
 makedepends=('perlxml' 'pkgconfig')
 options=('!libtool' '!emptydirs')
 install=libgnomekbd.install
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('a904fe74cefb9967cc0734b4c1ebc5cc')
+md5sums=('5d2a377c038f8a9e34778f65a80516bd')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
