--- a/seahorse/repos/gnome-i686/PKGBUILD
+++ b/seahorse/repos/gnome-i686/PKGBUILD
@@ -3,26 +3,23 @@
 # Contributor: Michel Brabants <michel.linux@tiscali.be>
 
 pkgname=seahorse
-pkgver=2.22.3
+pkgver=2.23.91
 pkgrel=1
 pkgdesc="GNOME application for managing PGP keys."
 arch=(i686 x86_64)
 license=('GPL')
 url="http://seahorse.sourceforge.net/"
-depends=('libgnomeui>=2.22.1' 'libnotify>=0.4.4' 'libsoup>=2.4.1' 'gpgme' 'desktop-file-utils' 'zip')
-makedepends=('gettext' 'libldap' 'perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2' 'nautilus>=2.22.4' 'epiphany>=2.22.2' 'gnome-panel>=2.22.2' 'gedit>=2.22.3' 'xulrunner>=1.9')
+depends=('gnome-keyring>=2.23.91' 'libglade>=2.6.3' 'avahi>=0.6.23' 'libnotify>=0.4.4' 'libsoup>=2.23.91' 'gpgme' 'desktop-file-utils' 'zip')
+makedepends=('gettext' 'libldap' 'perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2' 'nautilus>=2.23.91' 'epiphany>=2.23.91' 'gnome-panel>=2.23.91' 'gedit>=2.23.91' 'xulrunner>=1.9.0.1')
 options=('!libtool' '!emptydirs')
 groups=('gnome-extra')
 replaces=('gnome-keyring-manager')
 install=seahorse.install
-source=(http://ftp.gnome.org/pub/GNOME/sources/seahorse/2.22/seahorse-${pkgver}.tar.bz2
-	09_xul1.9.patch)
-md5sums=('7fdab30dbf8684881199e15246c3765a' '5c9265042821fa3e481c6cc31c3c849a')
+source=(http://ftp.gnome.org/pub/GNOME/sources/seahorse/2.23/seahorse-${pkgver}.tar.bz2)
+md5sums=('e4949546bdf97ce26c334afab6c62365')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  patch -Np1 -i ${startdir}/src/09_xul1.9.patch || return 1
-  autoconf || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-static \
 	      --enable-ldap --enable-hkp \
