--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -3,20 +3,20 @@
 # Contributor: Tom K <tomk@runbox.com>
 
 pkgname=ekiga
-pkgver=2.0.12
+pkgver=2.9.90
 pkgrel=1
 pkgdesc="VOIP/Videoconferencing app with full SIP and H.323 support (GnomeMeeting expanded and renamed)"
 url="http://www.ekiga.org"
 license=(GPL)
 arch=(i686 x86_64)
-depends=('opal>=2.2.11' 'libgnomeui>=2.22.01' 'evolution-data-server>=2.22.0' 'desktop-file-utils')
+depends=('opal>=3.3.1' 'libgnomeui>=2.23.90' 'evolution-data-server>=2.23.91' 'libsigc++2.0' 'libxv')
 makedepends=('pkgconfig' 'perlxml' 'gnome-doc-utils>=0.12.2')
 provides=('gnomemeeting')
 replaces=('gnomemeeting')
 options=(!emptydirs)
 install=ekiga.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.0/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('d86636c2195b4fb95aec427c17570008')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.9/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('306982219c94f4866bbd0a5873da7b8a')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
