--- a/rarian/trunk/PKGBUILD
+++ b/rarian/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=rarian
-pkgver=0.8.0
-pkgrel=2
+pkgver=0.8.1
+pkgrel=1
 pkgdesc="Documentation meta-data library, designed as a replacement for Scrollkeeper."
 arch=('i686' 'x86_64')
 url="http://rarian.freedesktop.org/"
@@ -14,15 +14,13 @@ conflicts=('scrollkeeper')
 provides=('scrollkeeper')
 replaces=('scrollkeeper')
 options=('!libtool')
-source=("http://ftp.gnome.org/pub/gnome/sources/${pkgname}/0.8/${pkgname}-${pkgver}.tar.bz2"
-        'info-segfault.patch' 'user-segfault.patch')
-md5sums=('67e2d3ab27edcebdae9b85733712805e'
-         '322bdbac3a8964e743ce465214a35c07'
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/0.8/${pkgname}-${pkgver}.tar.bz2
+        user-segfault.patch)
+md5sums=('75091185e13da67a0ff4279de1757b94'
          '457e9827197009cfa360911fe49a5ad7')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  patch -p0 -i ${srcdir}/info-segfault.patch || return 1
   patch -p0 -i ${srcdir}/user-segfault.patch || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
      --localstatedir=/var --disable-static || return 1
