--- a/yelp/repos/gnome-i686/PKGBUILD
+++ b/yelp/repos/gnome-i686/PKGBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=yelp
-pkgver=2.23.2
+pkgver=2.23.91
 pkgrel=1
 pkgdesc="A help browser for GNOME"
 arch=(i686 x86_64)
-depends=('xulrunner>=1.9.0.1' 'libgnomeui>=2.23.90' 'gnome-doc-utils>=0.12.2' 'startup-notification>=0.9' 'libxslt' 'hicolor-icon-theme')
+depends=('xulrunner>=1.9.0.1' 'libgnomeui>=2.23.90' 'gnome-doc-utils>=0.12.2' 'startup-notification>=0.9' 'libxslt' 'hicolor-icon-theme' 'rarian>=0.8.1')
 makedepends=('perlxml' 'pkgconfig')
 groups=('gnome')
 license=('GPL')
@@ -14,7 +14,7 @@ options=('!emptydirs')
 url="http://www.gnome.org"
 install=yelp.install
 source=(http://ftp.gnome.org/pub/gnome/sources/yelp/2.23/yelp-${pkgver}.tar.bz2)
-md5sums=('13243b82d4859a395e782442b0ed07ce')
+md5sums=('32d4edbb5401e0745ecbdc2ac1101082')
 
 build() {
   cd ${startdir}/src/yelp-${pkgver}
