--- a/kdelibs/trunk/PKGBUILD
+++ b/kdelibs/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=kdelibs
 pkgver=4.1.1
-pkgrel=2
+pkgrel=3
 pkgdesc="KDE Core Libraries"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -11,19 +11,23 @@ license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
 depends=('libxcursor' 'phonon' 'shared-mime-info' 'qt>=4.4' 'libxpm'
 	 'enchant' 'jasper' 'openexr' 'strigi' 'bzip2' 'libxslt' 'libxtst'
-	 'giflib' 'soprano' 'ca-certificates' 'heimdal' 'pmount')
+	 'giflib' 'soprano' 'ca-certificates' 'heimdal' 'pmount' 'xdg-utils')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'intltool' 'avahi' 'libgl')
 replaces=('arts')
 options=('docs')
+install='kdelibs.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
-        'kde-applications-menu.patch')
+        'kde-applications-menu.patch' 'archlinux-menu.patch')
 md5sums=('d75ec557cd864e3f9150059c3e58ed61'
-         '3daa0f01fe26325fb3dbd807a04898ad')
+         '3daa0f01fe26325fb3dbd807a04898ad'
+         '0ad42200df2d2b8aab01d2ef4b21e02f')
 
 build() {
 	cd $srcdir/${pkgname}-${pkgver}
 	# avoid file conflict with gnome-menu
 	patch -p1 -i $srcdir/kde-applications-menu.patch || return 1
+	# add Archlinux menu entry
+	patch -p0 -i $srcdir/archlinux-menu.patch || return 1
 	cd ..
 	mkdir build
 	cd build
@@ -32,6 +36,7 @@ build() {
 		-DKDE_DISTRIBUTION_TEXT='Arch Linux' \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DSYSCONF_INSTALL_DIR=/etc \
+		-DHTML_INSTALL_DIR=/usr/share/doc/kde/html \
 		-DKDE_DEFAULT_HOME='.kde4' \
 		-DWITH_FAM=OFF
 	make
