--- a/kdebluetooth/trunk/PKGBUILD
+++ b/kdebluetooth/trunk/PKGBUILD
@@ -1,18 +1,19 @@
 # $Id$
 # Contributor: Giovanni Scafora <linuxmania@gmail.com>
 # Maintainer: Thomas Baechler <thomas@archlinux.org>
+
 pkgname=kdebluetooth
-pkgver=4.0.1
-_realver=0.1
+pkgver=4.0.2
+_realver=0.2
 pkgrel=1
 pkgdesc="A collection of Bluetooth utilities and modules for KDE based on BlueZ"
 arch=('i686' 'x86_64')
 url="http://bluetooth.kmobiletools.org/"
-license=('GPL')
+license=('GPL2')
 depends=('kdebase-workspace')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 source=(http://downloads.sourceforge.net/sourceforge/kde-bluetooth/kdebluetooth4-${_realver}.tar.bz2)
-md5sums=('7c6e5162d457fa594ecdd3f339ea8fc1')
+md5sums=('66abefaf0d7e7f9980071c8519e52574')
 
 build() {
 	cd $srcdir
