--- a/xfdesktop/trunk/PKGBUILD
+++ b/xfdesktop/trunk/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: Tobias Kieslich <tobias@archlinux.org>
 
 pkgname=xfdesktop
 pkgver=4.4.2
-pkgrel=3
+pkgrel=4
 pkgdesc="A desktop manager for Xfce"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -16,10 +16,8 @@ replaces=('xfce4-menueditor')
 options=('!libtool')
 install=${pkgname}.install
 source=(http://www.xfce.org/archive/xfce-${pkgver}/src/${pkgname}-${pkgver}.tar.bz2
-        ftp://ftp.archlinux.org/other/xfce4-graphics/ArchLinux-xfce4-backdrops.tar.gz
-	memleak.patch)
+        memleak.patch)
 md5sums=('694601234e74903d0fccba064f411e0c'
-         'e353bb20d5a1fd3e37be69a2213f5436'
          '25db1e6f1702709a54288f21304d6dd2')
 
 build() {
@@ -29,6 +27,4 @@ build() {
     --localstatedir=/var --disable-static || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
-  install -m755 -d ${pkgdir}/usr/share/xfce4/backdrops
-  install -m644 ${srcdir}/ArchLinux.png ${startdir}/pkg/usr/share/xfce4/backdrops/ || return 1
 }
