--- a/gtk-xfce-engine/repos/extra-x86_64/PKGBUILD
+++ b/gtk-xfce-engine/repos/extra-x86_64/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: Tobias Kieslich <tobias@archlinux.org>
 
 pkgname=gtk-xfce-engine
 pkgver=2.4.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A port of Xfce engine to GTK+-2.0"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -12,9 +12,8 @@ groups=('xfce4')
 depends=('gtk2')
 makedepends=('pkgconfig')
 options=('!libtool')
-source=(http://www.xfce.org/archive/xfce-4.4.2/src/${pkgname}-${pkgver}.tar.bz2 \
-        ftp://ftp.archlinux.org/other/xfce4-graphics/ArchLinux-xfce4-gtk2.tar.gz)
-md5sums=('00eb6a62defe6867d28a18569b96d151' '71481fef064c74041f4529589a98875c')
+source=(http://www.xfce.org/archive/xfce-4.4.2/src/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('00eb6a62defe6867d28a18569b96d151')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
@@ -22,6 +21,4 @@ build() {
     --localstatedir=/var --disable-static
   make || return 1
   make DESTDIR=${startdir}/pkg install
-  mkdir -p ${startdir}/pkg/usr/share/themes
-  cp -R ../ArchLinux ${startdir}/pkg/usr/share/themes
 }
