--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -10,7 +10,7 @@ license=('GPL2')
 url="http://www.xfce.org/"
 groups=('xfce4')
 depends=('libxfcegui4>=4.4.2' 'libxfce4mcs>=4.4.2' 'dbus>=1.2.1')
-makedepends=('xfce-mcs-manager>=4.4.2' 'pkgconfig')
+makedepends=('xfce-mcs-manager>=4.4.2' 'pkgconfig' 'perlxml' 'xorg-server-utils')
 replaces=('xfce4-toys')
 options=('!libtool')
 install=${pkgname}.install
