--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: tobias [ tobias at archlinux org ]
 
 pkgname=vi
-_srcver=7.1
-_patchlevel=330
+_srcver=7.2
+_patchlevel=13
 pkgver=${_srcver}.${_patchlevel}
 pkgrel=1
 pkgdesc="a highly configurable, improved version of the vi text editor (basic version)"
@@ -20,8 +20,8 @@ source=(ftp://ftp.vim.org/pub/vim/unix/vim-${_srcver}.tar.bz2 \
         ftp://ftp.vim.org/pub/vim/extra/vim-${_srcver}-extra.tar.gz \
         ftp://ftp.vim.org/pub/vim/extra/vim-${_srcver}-lang.tar.gz \
         fetch_patches.sh fetch_runtime.sh)
-md5sums=('44c6b4914f38d6f9aa959640b89da329' '605cc7ae31bcc9d7864bb0bb6025f55d' \
-         '144aa049ba70621acf4247f0459f3ee7' '0fbebfbf8464b1e65fb6a9ca4bddefe1' \
+md5sums=('f0901284b338e448bfd79ccca0041254' '35e04482f07c57221c9a751aaa3b8dac' \
+         'd8884786979e0e520c112faf2e176f05' 'a3b03cd44b8ed78a99850d4cbfaafe55' \
          '92e3dc8844d446c1ecd28e7257a47cb7')
 
 build()
@@ -51,8 +51,8 @@ build()
   _runtimedir="${startdir}/pkg/usr/share/vim/"
   update_runtime
   # kill vim and x specific stuff
-  sed -i '/vms/,+4 d;/Convenient command/,+3 d;/mouse work/,+2 d'\
-    ${startdir}/pkg/usr/share/vim/vimrc_example.vim
+  #sed -i '/vms/,+4 d;/Convenient command/,+3 d;/mouse work/,+2 d'\
+  #  ${startdir}/pkg/usr/share/vim/vimrc_example.vim
   install -Dm644 ${startdir}/pkg/usr/share/vim/vimrc_example.vim \
     ${startdir}/pkg/etc/virc
   rm -f ${startdir}/pkg/usr/share/vim/gvimrc_example.vim
