--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: tobias <tobias@archlinux.org>
 
 pkgname=gimp
-pkgver=2.4.6
+pkgver=2.4.7
 pkgrel=1
 pkgdesc="GNU Image Manipulation Program"
 arch=('i686' 'x86_64')
@@ -13,13 +13,13 @@ depends=('gtk2>=2.12.11' 'lcms>=1.17' 'libxpm>=3.5.7' 'libwmf>=0.2.8.4'
          'libexif>=0.6.16' 'libart-lgpl>=2.3.20' 'pygtk>=2.12.1')
 makedepends=('gutenprint>=5.0.2' 'perlxml' 'poppler-glib>=0.8.4'
              'pkgconfig' 'alsa-lib>=1.0.16' 'libgnomeui>=2.22.1')
-optdepends=('gutenprint: Advanced printing support')
+				 optdepends=('gutenprint: Advanced printing support' 'poppler-glib: Opening PDF files')
 options=('!libtool' '!makeflags')
 conflicts=('gimp-unstable')
 install=${pkgname}.install
 source=(ftp://ftp.gimp.org/pub/gimp/v2.4/${pkgname}-${pkgver}.tar.bz2
         linux.gpl)
-md5sums=('a0bd1560f81f15c23ed4c0c6cb9c4b59' 'bb27bc214261d36484093e857f015f38')
+md5sums=('8d0e059597d70fbdeb77e6447bae29c4' 'bb27bc214261d36484093e857f015f38')
 
 build() {
    cd ${startdir}/src/${pkgname}-${pkgver}
